fixing overflow issues with calc

--- a/styles/style.less
+++ b/styles/style.less
@@ -77,7 +77,7 @@ body, html {
   Main Header section
  */
 .header {
-  width: 100%;
+  width: ~"calc(100% - 50px)";
   height: 70vh;
   padding: 25px;
   background: -moz-linear-gradient(top, rgba(43, 56, 64,0.80) 0%, rgba(43, 56, 64,1) 80%, rgba(43, 56, 64,1) 100%); /* FF3.6-15 */
@@ -131,7 +131,7 @@ body, html {
     top: 50%;
     margin-top: -37px;
     width: 100%;
-    max-width: 100vw;
+    max-width: ~"calc(100vw - 50px)";
     text-align: center;
     font-size: 54px;
     font-weight: 300;
@@ -149,7 +149,7 @@ body, html {
     top: 70%;
     text-align: center;
     width: 100%;
-    max-width: 100vw;
+    max-width: ~"calc(100vw - 50px)";
 
     span {
       color: @blue;
